// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts "down" direction 1`] = `
<svg
  height="16"
  viewBox="0 0 100 100"
  width="16"
>
  <title>
    Arrow Icon
  </title>
  <path
    d="M50,81.73,3.51,35.24A8,8,0,0,1,14.82,23.93L50,59.1,85.17,23.93A8,8,0,1,1,96.49,35.24Z"
  />
</svg>
`;

exports[`accepts "left" direction 1`] = `
<svg
  height="16"
  viewBox="0 0 100 100"
  width="16"
>
  <title>
    Arrow Icon
  </title>
  <path
    d="M50,81.73,3.51,35.24A8,8,0,0,1,14.82,23.93L50,59.1,85.17,23.93A8,8,0,1,1,96.49,35.24Z"
    transform="rotate(90, 50, 50)"
  />
</svg>
`;

exports[`accepts "right" direction 1`] = `
<svg
  height="16"
  viewBox="0 0 100 100"
  width="16"
>
  <title>
    Arrow Icon
  </title>
  <path
    d="M50,81.73,3.51,35.24A8,8,0,0,1,14.82,23.93L50,59.1,85.17,23.93A8,8,0,1,1,96.49,35.24Z"
    transform="rotate(-90, 50, 50)"
  />
</svg>
`;

exports[`accepts "size" prop 1`] = `
<svg
  height="32"
  viewBox="0 0 100 100"
  width="32"
>
  <title>
    Arrow Icon
  </title>
  <path
    d="M50,81.73,3.51,35.24A8,8,0,0,1,14.82,23.93L50,59.1,85.17,23.93A8,8,0,1,1,96.49,35.24Z"
  />
</svg>
`;

exports[`accepts "up" direction 1`] = `
<svg
  height="16"
  viewBox="0 0 100 100"
  width="16"
>
  <title>
    Arrow Icon
  </title>
  <path
    d="M50,81.73,3.51,35.24A8,8,0,0,1,14.82,23.93L50,59.1,85.17,23.93A8,8,0,1,1,96.49,35.24Z"
    transform="rotate(180, 50, 50)"
  />
</svg>
`;

exports[`renders 1`] = `
<svg
  height="16"
  viewBox="0 0 100 100"
  width="16"
>
  <title>
    Arrow Icon
  </title>
  <path
    d="M50,81.73,3.51,35.24A8,8,0,0,1,14.82,23.93L50,59.1,85.17,23.93A8,8,0,1,1,96.49,35.24Z"
  />
</svg>
`;
